tests/my/bad/array006.lat
int main() {
  int[][][] a = new int[][][10];
  printInt(a[0][0][0][0]);
  return 0;
}
